testcrate/tests/ui/sql_table.stderr
warning: No primary key found
  --> $DIR/sql_table.rs:34:8
   |
34 | struct Table<'a> {
   |        ^^^^^

error: use of unsupported type name `& 'a str`
  --> $DIR/sql_table.rs:36:13
   |
36 |     string: &'a str,
   |             ^^^^^^^

error: use of unsupported type name `Connection`
  --> $DIR/sql_table.rs:38:17
   |
38 |     connection: Connection,
   |                 ^^^^^^^^^^

error: use of unsupported type name `Connection`
  --> $DIR/sql_table.rs:40:25
   |
40 |     connection2: Option<Connection>,
   |                         ^^^^^^^^^^

error: use of unsupported type name `Option<String>`
  --> $DIR/sql_table.rs:42:28
   |
42 |     nested_options: Option<Option<String>>,
   |                            ^^^^^^^^^^^^^^^

error: use of unsupported type name `DateTime`
  --> $DIR/sql_table.rs:44:15
   |
44 |     datetime: DateTime,
   |               ^^^^^^^^

error: use of unsupported type name `DateTime<i32>`
  --> $DIR/sql_table.rs:46:19
   |
46 |     datetime_i32: DateTime<i32>,
   |                   ^^^^^^^^^^^^^

error: use of unsupported type name `ForeignKey`
  --> $DIR/sql_table.rs:48:20
   |
48 |     foreign_value: ForeignKey,
   |                    ^^^^^^^^^^

error: use of unsupported type name `Option`
  --> $DIR/sql_table.rs:50:21
   |
50 |     optional_value: Option,
   |                     ^^^^^^

error: use of unsupported type name `Vec`
  --> $DIR/sql_table.rs:52:13
   |
52 |     vector: Vec,
   |             ^^^

error: use of unsupported type name `Vec<i32>`
  --> $DIR/sql_table.rs:54:17
   |
54 |     vector_i32: Vec<i32>,
   |                 ^^^^^^^^

error: aborting due to 10 previous errors

